- Fixed a visual bug that rendered the locked keybindings unreadable in the controls menu

--- a/css/eclipsephase.css
+++ b/css/eclipsephase.css
@@ -913,6 +913,12 @@ optgroup .Default .Roll .Mode,
   font-family: 'Orbitron', sans-serif;
 }
 
+#keybindings .binding .key.uneditable{
+  background: none;
+  color: var(--inactive);
+  border: 1px solid var(--inactive);
+}
+
 #pause img {
   content: url(../resources/img/eclipse.webp);
 }
